<resources>
    <string name="app_name">Daily News</string>
    <string name="api_key">pub_102470fab747a7f00be27ca2d1556739c3d3f</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button_hint">Search…</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="status">status</string>
    <string name="scores">Scores</string>
    <string name="home">Home</string>
    <string name="sports">Sports</string>
    <string name="watch">Watch</string>
    <string name="top_picks_menu">Top Picks</string>
    <string name="football">Football</string>
    <string name="live">LIVE</string>
    <string name="title"><![CDATA[Man City vs Man Utd LIVE! & highlights]]></string>
</resources>