<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:visibility="visible">

    <data>

        <variable
            name="sharedViewModel"
            type="com.chrisojukwu.newsapp.viewmodel.NewsViewModel" />
    </data>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="true"
            tools:context="com.chrisojukwu.newsapp.views.TopStoriesFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:outlineSpotShadowColor="@color/outlineSpotShadowColor"
                    app:cardBackgroundColor="@color/background_color">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="366dp"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="@color/background_elevation_4dp"
                        app:cardElevation="8dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/image_view"
                                android:layout_width="match_parent"
                                android:layout_height="220dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/hero_image_2"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/text_view_live"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="24dp"
                                android:background="@color/bright_red"
                                android:paddingStart="8dp"
                                android:paddingTop="4dp"
                                android:paddingEnd="8dp"
                                android:paddingBottom="4dp"
                                android:text="@string/live"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/image_view" />

                            <TextView
                                android:id="@+id/text_view_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/title"
                                android:textColor="@color/text_color"
                                android:textSize="24sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/text_view_live" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </androidx.cardview.widget.CardView>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_headlines"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="0dp"
                        android:background="@color/background_color"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:newsItemList="@{sharedViewModel.topStoriesItem}"
                        tools:listitem="@layout/news_list_item" />

                    <ImageView
                        android:id="@+id/image_view_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/status"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:newsApiStatus="@{sharedViewModel.status}" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

</layout>